--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body style="background-color: tomato;">
     <h1 style="text-align: center;color: white;">ho gya hangama</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus nam est animi alias corrupti voluptatum delectus quam magnam aspernatur maxime impedit laborum totam voluptates enim, aut beatae quasi error! Asperiores!
+        
+    </p>
 </body>
 </html>
